fix of overflow so last pictures are no longer cut off

--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,10 @@
   display: grid;
   height: 85%;
   grid-template-rows: 1fr;
-  grid-template-columns: 350px 60vw 20vw;
+  grid-template-columns: 350px 60vw 10vw;
   padding-top: 0px;
   padding-bottom: 70px;
  overflow: hidden;
  justify-content: center;
+ grid-gap: 5px;
 }
