--- a/src/components/cards/CardContainer/CardContainer.css
+++ b/src/components/cards/CardContainer/CardContainer.css
@@ -1,9 +1,10 @@
 .cardContainer {
-  height: 100%;
+  height: 75vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow-y: scroll;
+  align-self: center;
 }
