--- a/src/components/layout/sidebar/Sidebar.css
+++ b/src/components/layout/sidebar/Sidebar.css
@@ -41,7 +41,7 @@
   grid-row: 1/4;
   grid-column: 2;
   overflow-y: hidden;
-  height: 58vh;
+  height: 75vh;
   width: 60vw;
 }
 
